# SapiSales

./: CMakeLists.txt  README.md
sapi_sales/headers/manager/: lab12.h  lab2.h  lab3.h  lab4.h  lab5.h  lab7.h  lab8.h  lab_manager.h
sapi_sales/headers/models/: product.h  product_array.h  user.h
sapi_sales/headers/models/array/: product_array.h  user_array.h
sapi_sales/headers/models/binary_search_tree/: users_bst.h
sapi_sales/headers/models/hash/: product_hash.h
sapi_sales/headers/models/list/: user_list.h
sapi_sales/headers/models/queue/: user_queue.h
sapi_sales/headers/models/stack/: product_stack.h
sapi_sales/src/: main.c
sapi_sales/src/manager/: lab12.c  lab2.c  lab3.c  lab4.c  lab5.c  lab7.c  lab8.c  lab_manager.c
sapi_sales/src/models/: product.c  product_array.c  product_stack.c  user.c  user_array.c
sapi_sales/src/models/array/: product_array.c  user_array.c
sapi_sales/src/models/binary_search_tree/: users_bst.c
sapi_sales/src/models/hash/: product_hash.c
sapi_sales/src/models/list/: user_list.c
sapi_sales/src/models/queue/: user_queue.c
sapi_sales/src/models/stack/: product_stack.c
shared/headers/: errors.h  messages.h  useful.h
shared/src/: errors.c  messages.c
